--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
     <a href="http://typecho.org/" target="_blank">typecho</a>
-    <a href="http://qqdie.com" target="_blank">Blog</a>
+    <a href="http://gxusb.com" target="_blank">Blog</a>
   </nav>
   <div id="app">Load...</div>
 </body>
