--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="./favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="keywords" content="typecho,theme,docs,文档,模板">
   <meta name="description" content="Typecho Docs">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Typecho Docs</title>
-  <link rel="stylesheet" href="lib/vue.css">
+  <link rel="stylesheet" href="./lib/vue.css">
 </head>
+
 <body>
     <nav>
     <a href="http://typecho.org/" target="_blank">typecho</a>
@@ -17,6 +18,7 @@
   </nav>
   <div id="app">Load...</div>
 </body>
+
   <script>
     window.$docsify = {
       name: 'Typecho',
@@ -36,7 +38,8 @@
       },
     }
   </script>
-  <script src="lib/docsify.min.js"></script>
+  <script src="./lib/docsify.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-php.js"></script>
-  <script src="lib/search.min.js"></script>
+  <script src="./lib/search.min.js"></script>
+
 </html>
